# KAIR

example_source/Dynamixel/: PantiltTest.py
example_source/EncoderTest/: EncoderReader.c  setup.py  test_code.py
example_source/Hokuyo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mrpt_example  test.cpp
example_source/JoysticTest/: #joystic_mobile_control.py#  joystic_mobile_control.py
example_source/JoysticTest/NIDeviceWrapper/: README  setup.py
example_source/SLAM/Action Model with Encoder/: CMakeCache.txt  CMakeLists.txt  Encoder.cpp  EncoderTest  Makefile  cmake_install.cmake
example_source/SLAM/icp_slam/: #SickLMS200.cpp#  #output#  CMakeCache.txt  CMakeLists.txt  Makefile  SLAM_ICP  SLAM_ICP2  SickLMS200.cpp  backup_SLAM_ICP  backup_sensor_data.rawlog  cmake_install.cmake  data_3D_20091006.rawlog  data_3D_20091007.rawlog  dataset_malaga_large_floor2.3_1laser_20070517.tgz  icp-slam_main.cpp  sensor_data.rawlog
example_source/Sick/: CMakeCache.txt  CMakeLists.txt  Makefile  SICK_TEST  SickTest.cpp  cmake_install.cmake
mobile/.ropeproject/: objectdb
mobile/configuration/: Configuration.py
mobile/linux/: Controller_control.py  Controller_control_flymake_flymake.py  Controller_view.py
mobile/linux/arm/: KNI_flymake.py  setting.sh
mobile/linux/cplus/: CMakeCache.txt  CMakeLists.txt  Client  Makefile  client.cpp  cmake_install.cmake  config.ini
mobile/linux/cplus/slam/: Makefile  (+8 more)
mobile/linux/dynamixel/: dynamixel_AX12.py
mobile/linux/network/: client.py  server.py
mobile/window/: joystic_mobile_control.py  window_server.py
(+17 files in other folders)
